2014-06-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/scan.l:
    Fixed bug: #272 Problem with CONFIG and reserved keywords

2014-06-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/directive.h, gpasm/special.c:
    Changed type of function parameter: 'char *' ==> 'const char *'

  * libgputils/Makefile.am, libgputils/Makefile.in,
    libgputils/gphash.c, libgputils/gphash.h:
    New functions for more precise error messages.

  * libgputils/gpcoff.h, libgputils/gpcofflink.c,
    libgputils/gpmemory.c, libgputils/gpmemory.h,
    libgputils/gpopcode.h, libgputils/gpreadhex.c,
    libgputils/gpreadobj.c, libgputils/libgputils.h:
    Changes for more precise error messages and some text format.

2014-06-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/directive.c:
    Text format.

2014-06-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/testsuite/test, gputils/testsuite/test:
    Minor improvements.

  * gpasm/evaluate.c, gpasm/gpasm.c, gpasm/gperror.c,
    gpasm/processor.c, gplink/gplink.c, gplink/lst.c,
    gplink/map.c, libgputils/gparchive.c, libgputils/gpcod.c,
    libgputils/gpcoffgen.c, libgputils/gpcofflink.c,
    libgputils/gpmemory.c, libgputils/gpmessage.c,
    libgputils/gpreadobj.c, libgputils/gpsymbol.c,
    libgputils/gpwriteobj.c:
    Text format.

2014-06-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/directive.c, gpasm/lst.c, gplink/cod.c,
    gplink/gplink.c, gplink/lst.c, gputils/gpdasm.c, gputils/gpvo.c,
    libgputils/gpcoff.h, libgputils/gpcoffgen.c, libgputils/gpcoffgen.h,
    libgputils/gpcofflink.c, libgputils/gpcofflink.h, libgputils/gpdis.c,
    libgputils/gpmemory.c, libgputils/gpmemory.h, libgputils/gpopcode.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpreadhex.c, libgputils/gpreadobj.c,
    libgputils/gpwritehex.c, libgputils/gpwriteobj.c: